--- a/actoseg/main/pages/Principal.Master
+++ b/actoseg/main/pages/Principal.Master
@@ -15,6 +15,7 @@
                <!DOCTYPE html>
 <html lang="en">
 <head>
+    
   <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,11 +31,22 @@
 	<!-- Bootstrap extend-->
 	<link rel="stylesheet" href="../css/bootstrap-extend.css">	
 	
+    <!-- Select2 -->
+	<link rel="stylesheet" href="../../assets/vendor_components/select2/dist/css/select2.min.css">	
+
+    <!-- Data Table-->
+	<link rel="stylesheet" type="text/css" href="../../assets/vendor_components/datatable/datatables.min.css"/>
+
+<%--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> --%>
+   
+
 	<!-- Theme style -->
 	<link rel="stylesheet" href="../css/master_style.css">
 
 	<!-- Bankio admin skins -->
 	<link rel="stylesheet" href="../css/skins/_all-skins.css">	
+
+
 
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -42,7 +54,8 @@
 	<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
-    	<!-- jQuery 3 -->
+    
+    <!-- jQuery 3 -->
 	<script src="../../assets/vendor_components/jquery-3.3.1/jquery-3.3.1.js"></script>
 	
 	<!-- fullscreen -->
@@ -69,6 +82,19 @@
 	
 	<script src="../js/pages/formatter.js"></script>
 
+     <!--alerts CSS -->
+    <link href="../../assets/vendor_components/sweetalert/sweetalert.css" rel="stylesheet" type="text/css">
+
+     <!-- Sweet-Alert  -->
+    <script src="../../assets/vendor_components/sweetalert/sweetalert.min.js"></script>
+    <script src="../../assets/vendor_components/sweetalert/jquery.sweet-alert.custom.js"></script>
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+	<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<![endif]-->
 
 	<!-- jQuery ui -->
 	<script src="../../assets/vendor_components/jquery-ui/jquery-ui.js"></script>
@@ -110,6 +136,28 @@
 	
 	<!-- Bankio admin dashboard demo (This is only for demo purposes) -->
 	<script src="../js/pages/dashboard.js"></script>
+
+    <!-- Bootstrap switch-->
+	<link rel="stylesheet" href="../../assets/vendor_components/bootstrap-switch/switch.css">
+    <!-- INCLUIR COTAÇÃO -->
+
+  <%--  <!-- Bootstrap select -->
+	<link rel="stylesheet" href="../../assets/vendor_components/bootstrap-select/dist/css/bootstrap-select.css">--%>
+    <!-- Select2 -->
+	<%--<link rel="stylesheet" href="../../assets/vendor_components/select2/dist/css/select2.min.css">--%>	
+
+
+ <%--   <!-- Select2 -->
+	<script src="../../assets/vendor_components/select2/dist/js/select2.full.js"></script>--%>
+
+    <!-- INCLUIR COTAÇÃO FIM -->
+
+  <!-- This is data table -->
+    <script src="../../assets/vendor_components/datatable/datatables.min.js"></script>
+	
+	<!-- Bankio admin for Data Table -->
+	<script src="../js/pages/data-table.js"></script>
+	<script src="../js/pages/project-table.js"></script>
 
 </head>
 <body class="hold-transition skin-green sidebar-mini">
@@ -158,8 +206,7 @@
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="MeuCadastro.aspx"><i class="fa fa-circle-thin"></i>Meu Cadastro</a></li>
-              <li><a href="MeuEndereco.aspx"><i class="fa fa-circle-thin"></i>Meu Endereço</a></li>
+            <li><a href="MeuCadastro.aspx"><i class="fa fa-circle-thin"></i>Cliente</a></li>
               <%--<li><a href="em_manutencao.html"><i class="fa fa-circle-thin"></i>Minha Empresa</a></li>--%>
               <li><a href="MeuIndicado.aspx"><i class="fa fa-circle-thin"></i>Incluir Indicado</a></li>              
               <li><a href="EnderecoIndicado.aspx""><i class="fa fa-circle-thin"></i>Endereço do Indicado</a></li>              
@@ -173,8 +220,8 @@
             </span>
           </a>
           <ul class="treeview-menu">
-              <li><a href="IncluirCotacao.aspx"><i class="fa fa-circle-thin"></i>Incluir</a></li>  
-              <li><a href="GestaoCotacao.aspx"><i class="fa fa-circle-thin"></i>Gestão</a></li>
+              <li><a href="IncluirCotacao.aspx"><i class="fa fa-circle-thin"></i>Nova Cotação</a></li>  
+              <li><a href="GestaoCotacao.aspx"><i class="fa fa-circle-thin"></i>Lista de Cotações</a></li>
                       
           </ul>
         </li>  		
@@ -187,7 +234,6 @@
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="Default.aspx"><i class="fa fa-circle-thin"></i>Indicados</a></li>
             <li><a href="Default.aspx"><i class="fa fa-circle-thin"></i>Cotações</a></li>
             <li><a href="Default.aspx"><i class="fa fa-circle-thin"></i>Pagamentos</a></li>
             <li><a href="Default.aspx"><i class="fa fa-circle-thin"></i>Apólices</a></li>
@@ -411,6 +457,10 @@
             
         </div>
     </form>
-  
+
+        <!-- Select2 -->
+	<script src="../../assets/vendor_components/select2/dist/js/select2.full.js"></script>
+       <!-- Bankio admin for advanced form element -->
+	<script src="../js/pages/advanced-form-element.js"></script>
 </body>
 </html>
