--- a/actoseg/Site.Master
+++ b/actoseg/Site.Master
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 
 <html lang="pt">
+	<title>ACTO ONLINE</title>
 <%--<head runat="server">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
